--- a/src/pages/admin/photos/index.astro
+++ b/src/pages/admin/photos/index.astro
@@ -37,6 +37,7 @@ try {
     photosData = await response.json();
   }
 } catch (error) {
+  // eslint-disable-next-line no-console
   console.error("Failed to fetch photos:", error);
 }
 ---
