--- a/src/pages/admin/photos/[id]/edit.astro
+++ b/src/pages/admin/photos/[id]/edit.astro
@@ -51,6 +51,7 @@ try {
 
   photo = await response.json();
 } catch (error) {
+  // eslint-disable-next-line no-console
   console.error("Failed to fetch photo:", error);
   fetchError = error instanceof Error ? error.message : "Failed to fetch photo";
 }
