--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,22 @@
 ---
-import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
+import HeaderSection from "../components/landing/HeaderSection";
+import HeroSection from "../components/landing/HeroSection";
+import HowItWorksSection from "../components/landing/HowItWorksSection";
+import ModesSection from "../components/landing/ModesSection";
+import CommunitySection from "../components/landing/CommunitySection";
+import FooterSection from "../components/landing/FooterSection";
 ---
 
 <Layout>
-  <Welcome />
+  <div class="min-h-screen bg-gradient-to-b from-white to-sky-50 text-gray-900">
+    <HeaderSection client:load />
+    <main>
+      <HeroSection client:load />
+      <HowItWorksSection client:load />
+      <ModesSection client:load />
+      <CommunitySection client:load />
+    </main>
+    <FooterSection client:load />
+  </div>
 </Layout>
