--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title = "FootyGuess Daily - Test Your Football Knowledge" } = Astro.prop
 // Get auth state from middleware
 // @typescript-eslint/no-unused-vars
 //  Ignore unused variabable with eslint comment
-/* eslint-disable no-unused-vars */
+// eslint-disable-next-line no-unused-vars
 const { user } = Astro.locals;
 ---
 
