fix: some linting issues

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,11 +8,7 @@ interface Props {
 
 const { title = "FootyGuess Daily - Test Your Football Knowledge" } = Astro.props;
 
-// Get auth state from middleware
-// @typescript-eslint/no-unused-vars
-//  Ignore unused variabable with eslint comment
-// eslint-disable-next-line no-unused-vars
-const { user } = Astro.locals;
+// const { user } = Astro.locals;
 ---
 
 <!doctype html>
