fix: some linting issues

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ interface Props {
   // showNavigation?: boolean;
 }
 
-const { title = "FootyGuess Daily - Test Your Football Knowledge" } = Astro.props;
+const { title = "Daily photo quizz" } = Astro.props;
 
 // const { user } = Astro.locals;
 ---
