--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,13 @@ const { title = "Daily photo quizz" } = Astro.props;
       content="Test your football knowledge! Guess the location and year of iconic football moments. Play daily challenges or unlimited practice rounds."
     />
     <title>{title}</title>
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "ue6775dqq5");
+    </script>
   </head>
   <body>
     <main>
