feat: added share results

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import { Toaster } from "@/components/ui/sonner";
 
 interface Props {
   title?: string;
@@ -42,6 +43,7 @@ const { title = "Daily photo quizz" } = Astro.props;
     <main>
       <slot />
     </main>
+    <Toaster client:load />
   </body>
 </html>
 
