--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,9 @@ import { ContactForm } from "../components/ContactForm";
 ---
 
 <Layout>
-  <div class="min-h-screen bg-gradient-to-b from-white to-sky-50 py-16 px-4 text-gray-900 dark:from-gray-900 dark:to-gray-800 dark:text-gray-100 sm:px-6 lg:px-8">
+  <div
+    class="min-h-screen bg-gradient-to-b from-white to-sky-50 py-16 px-4 text-gray-900 dark:from-gray-900 dark:to-gray-800 dark:text-gray-100 sm:px-6 lg:px-8"
+  >
     <ContactForm client:load />
   </div>
 </Layout>
